# minecraft_packet_sniffer

./: Cargo.toml  LICENSE.txt  README.md  build.rs
src/: main.rs  sniffer.rs  tcp_connection.rs
src/parser/: error.rs  ether_ip.rs  mod.rs  tcp.rs  test.rs  udp.rs
src/protocol/: listener.rs  mod.rs
src/protocol/packets/: configuration.rs  format.rs  handshaking.rs  login.rs  mod.rs  status.rs  unknown.rs
src/protocol/types/: error.rs  identifier.rs  known_pack.rs  mod.rs  player_property.rs  primitives.rs  state.rs  string.rs  uuid.rs  var_num.rs  vec.rs
