[package]
name = "minecraft_packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = "1.16.0"
pcap = "2.2.0"
color-eyre = "0.6.3"
itertools = "0.14.0"
bitflags = "2.9.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
flume = "0.11.1"
env_logger = "0.11.8"
log = "0.4.27"
flate2 = "1.1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
