[package]
name = "minecraft_packet_sniffer"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
color-eyre = "0.6.5"
env_logger = "0.11.8"
flate2 = "1.1.2"
flume = "0.11.1"
itertools = "0.14.0"
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
owo-colors = "4.2.1"
pcap = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = "1.17.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
